--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon dist/server.js",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "vercel-build": "npm run build"
   },
   "keywords": [],
   "author": "",
