--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.1.0",
     "nodemon": "^3.1.10"
   }
 }
